--- a/views/propertydetail.ejs
+++ b/views/propertydetail.ejs
@@ -70,7 +70,7 @@
         <div class="nav-header">
             <a href="index.html" class="brand-logo">
                 <img class="logo-abbr" src="images/logo.png" alt="/">
-                <img class="logo-compact" src="images/logo-text.png" alt="/">
+                <h6 class="logo-compact">Soaro</h6>
                 <img class="brand-title" src="images/logo-text.png" alt="/">
             </a>
 
@@ -971,7 +971,7 @@
 												</div>
 												<div class="ms-md-4 text-md-right">
 													<p class="text-black mb-1 me-1">Price range</p>
-													<h3 class="text-primary">₦<%= lands.amount.toLocaleString('en-NG', { minimumFractionDigits: 2 }) %></h3>
+													<h3 class="text-primary"><%= lands.amount.toLocaleString('en-NG', { minimumFractionDigits: 2 }) %></h3>
 												</div>
 											</div>
 											<div class="mb-sm-5 mb-2">
