--- a/views/composeone.ejs
+++ b/views/composeone.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Title -->
-	<title>Omah - Real Estate Admin Dashboard Template</title>
+	<title>Compose SMS</title>
  
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -26,10 +26,11 @@
 
 	<!-- MOBILE SPECIFIC -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+  
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-	<link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="vendor/dropzone/dist/dropzone.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -84,13 +85,13 @@
 			<div class="custom-tab-1">
 				<ul class="nav nav-tabs">
 					<li class="nav-item">
-						<a class="nav-link" data-bs-toggle="tab" href="ecom-invoice.html#notes">Notes</a>
+						<a class="nav-link" data-bs-toggle="tab" href="email-compose.html#notes">Notes</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" data-bs-toggle="tab" href="ecom-invoice.html#alerts">Alerts</a>
+						<a class="nav-link" data-bs-toggle="tab" href="email-compose.html#alerts">Alerts</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" data-bs-toggle="tab" href="ecom-invoice.html#chat">Chat</a>
+						<a class="nav-link active" data-bs-toggle="tab" href="email-compose.html#chat">Chat</a>
 					</li>
 				</ul>
 				<div class="tab-content">
@@ -810,126 +811,107 @@
             <div class="container-fluid">
                 <div class="page-titles">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="javascript:void(0)">Shop</a></li>
-						<li class="breadcrumb-item active"><a href="javascript:void(0)">Invoice</a></li>
+						<li class="breadcrumb-item"><a href="javascript:void(0)">Email</a></li>
+						<li class="breadcrumb-item active"><a href="javascript:void(0)">Compose</a></li>
 					</ol>
                 </div>
-                 <div class="row">
+                <!-- row -->
+                <div class="row">
                     <div class="col-lg-12">
-
                         <div class="card">
-                            <div class="card-header"> Invoice <strong>01/01/<span class="current-year">2024</span></strong> <span class="float-end"> <strong>Status:</strong> Pending</span> </div>
                             <div class="card-body">
-                                <div class="row mb-5">
-                                    <div class="mt-4 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                                        <h6>From:</h6>
-                                        <div> <strong>Webz Poland</strong> </div>
-                                        <div>Madalinskiego 8</div>
-                                        <div>71-101 Szczecin, Poland</div>
-                                        <div>Email: info@webz.com.pl</div>
-                                        <div>Phone: +48 444 666 3333</div>
-                                    </div>
-                                    <div class="mt-4 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                                        <h6>To:</h6>
-                                        <div> <strong>Bob Mart</strong> </div>
-                                        <div>Attn: Daniel Marek</div>
-                                        <div>43-190 Mikolow, Poland</div>
-                                        <div>Email: marek@daniel.com</div>
-                                        <div>Phone: +48 123 456 789</div>
-                                    </div>
-                                    <div class="mt-4 col-xl-6 col-lg-6 col-md-12 col-sm-12 d-flex justify-content-lg-end justify-content-md-start justify-content-xs-start">
-                                        <div class="row align-items-center">
-											<div class="col-sm-9"> 
-												<div class="brand-logo justify-content-start p-0 mb-3">
-													<img class="logo-abbr me-2" src="images/logo.png" alt="/">
-													<h6 class="logo-compact">Soaro</h6>
+								<div class="row">
+									<div class="col-lg-3 email-left-body">
+										<div class="email-left-box generic-width">
+												<div class="p-0">
+													<a href="email-compose.html" class="btn btn-primary btn-block">You're about to send SMS </a>
+
+													<div class="col-xl-12 col-lg-12">
+														
+															<div class="card text-center">
+																<div class="card-body">
+																	<div class="position-relative mb-3 d-inline-block">
+																		<% if (tenant.imageUrl[0]) { %>
+																			<img src="<%= tenant.imageUrl[0].url %>" alt="Lawyer Image" class="rounded" width="140">
+																		<% } else { %>
+																			<img src="/path-to-placeholder-image.jpg" alt="No Image Available" class="rounded" width="140">
+																		<% } %>
+																		<!-- <a href="app-profile.html" class="profile-icon"><i class="las la-cog"></i></a> -->
+																	</div>
+																	<h2 class="text-black fs-20 font-w600">
+																		<%= tenant.firstname ? tenant.firstname : "N/A" %> 
+																		<%= tenant.lastname ? tenant.lastname : "" %>
+																	</h2>
+																	<span class="mb-3 text-black d-block">
+																		UserType: Tenant  
+																	</span>
+																	<span class="mb-3 text-black d-block">
+																		occupation: <%= tenant.occupation %>
+																	</span>
+																	<span class="mb-3 text-black d-block">
+																		gender: <%= tenant.gender %>
+																	</span>
+																	<span class="mb-3 text-black d-block">
+																		familycount: <%= tenant.familycount %>
+																	</span>
+																	
+																	<!-- <p>Home Address: <%= tenant.address %></p> -->
+																	<!-- <ul class="property-social">
+																		<li><a href="javascript:void(0);"><i class="lab la-instagram"></i></a></li>
+																		<li><a href="javascript:void(0);"><i class="lab la-facebook-f"></i></a></li>
+																		<li><a href="javascript:void(0);"><i class="lab la-twitter"></i></a></li>
+																	</ul> -->
+																</div>
+																<div class="card-footer border-0 pt-0">
+																	<a href="javascript:void(0);" class="btn btn-outline-primary d-block rounded">
+																		<i class="las la-phone scale5 me-2"></i>
+																		<%= tenant.phonenumber%>
+																	</a>
+																</div>
+															</div>
+														
+													</div>
 												</div>
-                                                <span>Please send exact amount: <strong class="d-block">0.15050000 BTC</strong>
-                                                    <strong>1DonateWffyhwAjskoEwXt83pHZxhLTr8H</strong></span><br>
-                                                <small class="text-muted">Current exchange rate 1BTC = $6590 USD</small>
-                                            </div>
-                                            <div class="col-sm-3 mt-3"> <img src="images/qr.png" class="img-fluid width110" alt="/"> </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th class="center">#</th>
-                                                <th>Item</th>
-                                                <th>Description</th>
-                                                <th class="right">Unit Cost</th>
-                                                <th class="center">Qty</th>
-                                                <th class="right">Total</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td class="center">1</td>
-                                                <td class="left strong">Origin License</td>
-                                                <td class="left">Extended License</td>
-                                                <td class="right">$999,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$999,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">2</td>
-                                                <td class="left">Custom Services</td>
-                                                <td class="left">Instalation and Customization (cost per hour)</td>
-                                                <td class="right">$150,00</td>
-                                                <td class="center">20</td>
-                                                <td class="right">$3.000,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">3</td>
-                                                <td class="left">Hosting</td>
-                                                <td class="left">1 year subcription</td>
-                                                <td class="right">$499,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$499,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">4</td>
-                                                <td class="left">Platinum Support</td>
-                                                <td class="left">1 year subcription 24/7</td>
-                                                <td class="right">$3.999,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$3.999,00</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-4 col-sm-5"> </div>
-                                    <div class="col-xl-4 col-lg-4 col-sm-7 ms-auto">
-                                        <table class="table table-clear">
-                                            <tbody>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Subtotal</strong></td>
-                                                    <td class="right">$8.497,00</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Discount (20%)</strong></td>
-                                                    <td class="right">$1,699,40</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">VAT (10%)</strong></td>
-                                                    <td class="right">$679,76</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Total</strong></td>
-                                                    <td class="right"><strong class="text-black">$7.477,36</strong><br>
-                                                        <strong class="text-black">0.15050000 BTC</strong></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
+												
+											</div>
+									</div>
+									<div class="col-lg-9">
+										<div class="email-right-box">
+											<div class="email-tools-box float-end mb-2">
+												<i class="fa-solid fa-list-ul"></i>
+											</div>
+											<div class="compose-content">
+												<form action="email-compose.html#">
+													<div class="mb-3">
+														<input type="text" class="form-control bg-transparent" placeholder=" To: <%=tenant.phonenumber%>" value="<%=tenant.phonenumber%>">
+													</div>
+													<div class="mb-3">
+														<input type="text" class="form-control bg-transparent" placeholder=" Subject:">
+													</div>
+													<div class="mb-3">
+														<textarea id="email-compose-editor" class="textarea_editor form-control bg-transparent" rows="15" placeholder="Enter text ..."></textarea>
+													</div>
+												</form>
+												<!-- <h5 class="mb-4"><i class="fa fa-paperclip"></i> Attatchment</h5> -->
+												<!-- <form action="email-compose.html#" class="dropzone">
+													<div class="fallback">
+														<input name="file" type="file" multiple>
+													</div>
+												</form> -->
+												
+											</div>
+											<div class="text-start mt-4 mb-2">
+												<button class="btn btn-danger light btn-sl-sm" type="button"><span class="me-2"><i class="fa fa-times" aria-hidden="true"></i></span>Discard</button>
+												<button class="btn btn-primary btn-sl-sm me-2" type="button"><span class="me-2"><i class="fa fa-paper-plane"></i></span>Send</button>
+											</div>
+										</div>
+									</div>
+								</div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <!--**********************************
@@ -969,10 +951,19 @@
     <!-- Required vendors -->
     <script src="vendor/global/global.min.js"></script>
 	<script src="vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="vendor/dropzone/dist/dropzone.js"></script>
     <script src="js/custom.min.js"></script>
 	<script src="js/deznav-init.js"></script>
-	
-
+	<script>
+		
+		$(".fa.fa-star").click(function () {
+		  $(this).toggleClass("yellow");
+		});
+		
+		$(".email-tools-box").on('click', function(){
+		$(' .email-left-body ,.email-tools-box').toggleClass("active");
+	  });
+	</script>
 </body>
 
 </html>
