--- a/views/pasttenant.ejs
+++ b/views/pasttenant.ejs
@@ -26,10 +26,13 @@
 
 	<!-- MOBILE SPECIFIC -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+   
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-	<link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+    <!-- Custom Stylesheet -->
+    <link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+	<link href="vendor/bootstrap-datepicker-master/css/bootstrap-datepicker.min.css" rel="stylesheet">
+	<link href="vendor/dropzone/dist/dropzone.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -84,13 +87,13 @@
 			<div class="custom-tab-1">
 				<ul class="nav nav-tabs">
 					<li class="nav-item">
-						<a class="nav-link" data-bs-toggle="tab" href="ecom-invoice.html#notes">Notes</a>
+						<a class="nav-link" data-bs-toggle="tab" href="all-Tenant.html#notes">Notes</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" data-bs-toggle="tab" href="ecom-invoice.html#alerts">Alerts</a>
+						<a class="nav-link" data-bs-toggle="tab" href="all-Tenant.html#alerts">Alerts</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" data-bs-toggle="tab" href="ecom-invoice.html#chat">Chat</a>
+						<a class="nav-link active" data-bs-toggle="tab" href="all-Tenant.html#chat">Chat</a>
 					</li>
 				</ul>
 				<div class="tab-content">
@@ -807,131 +810,125 @@
             Content body start
         ***********************************-->
         <div class="content-body">
-            <div class="container-fluid">
-                <div class="page-titles">
-					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="javascript:void(0)">Shop</a></li>
-						<li class="breadcrumb-item active"><a href="javascript:void(0)">Invoice</a></li>
-					</ol>
-                </div>
-                 <div class="row">
-                    <div class="col-lg-12">
+			<div class="container-fluid">
+				<div class="row">
+					
+					  <div class="form-head page-titles d-flex  align-items-center">
+						<div class="me-auto  d-lg-block d-block">
+							<h4 class="mb-1">Past Tenant View</h4>
+							<ol class="breadcrumb">
+								<li class="breadcrumb-item active"><a href="javascript:void(0)">All Past Tenants</a></li>
+								<li class="breadcrumb-item"><a href="javascript:void(0)">All Tenant listing</a></li>
+							</ol>
+						</div>
+						<div class="di" style="display: flex;justify-content: space-around;align-items: center;gap: 10px;margin-right: 1%;">
+							<input  class="form-control" type="text" placeholder="Search Here" aria-label="Search">
+							<div class="mb-3 col-lg-4 col-md-6 col-lg-2" style="width: 50%;">
+								<!-- <label class="form-label">Property</label> -->
+								<select id="propertySelect" class="default-select form-control wide" name="propertyId" required>
+									<option value="select">Select Property</option>
+									<% allLands.forEach(land => { %>
+										<option value="<%= land.id %>"><%= land.name %></option>
+									<% }) %>
+								</select>
+								<script>
+									const selects = document.querySelector("#propertySelect");
+									selects.addEventListener("change",async (e) => {
+										console.log(e.target.value)
+										window.location.href = `/tenant?type=filter&propertyId=${e.target.value}`
+									})
+								</script>
+							</div>
 
-                        <div class="card">
-                            <div class="card-header"> Invoice <strong>01/01/<span class="current-year">2024</span></strong> <span class="float-end"> <strong>Status:</strong> Pending</span> </div>
-                            <div class="card-body">
-                                <div class="row mb-5">
-                                    <div class="mt-4 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                                        <h6>From:</h6>
-                                        <div> <strong>Webz Poland</strong> </div>
-                                        <div>Madalinskiego 8</div>
-                                        <div>71-101 Szczecin, Poland</div>
-                                        <div>Email: info@webz.com.pl</div>
-                                        <div>Phone: +48 444 666 3333</div>
-                                    </div>
-                                    <div class="mt-4 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                                        <h6>To:</h6>
-                                        <div> <strong>Bob Mart</strong> </div>
-                                        <div>Attn: Daniel Marek</div>
-                                        <div>43-190 Mikolow, Poland</div>
-                                        <div>Email: marek@daniel.com</div>
-                                        <div>Phone: +48 123 456 789</div>
-                                    </div>
-                                    <div class="mt-4 col-xl-6 col-lg-6 col-md-12 col-sm-12 d-flex justify-content-lg-end justify-content-md-start justify-content-xs-start">
-                                        <div class="row align-items-center">
-											<div class="col-sm-9"> 
-												<div class="brand-logo justify-content-start p-0 mb-3">
-													<img class="logo-abbr me-2" src="images/logo.png" alt="/">
-													<h6 class="logo-compact">Soaro</h6>
+						</div>
+						
+						<a href="/tenant?type=add" class="btn btn-primary light">+ Add Tenant</a>
+					</div>
+					<% tenants.forEach(item => { %>
+						
+						<div class="col-xl-3 col-xxl-4 col-lg-4 col-sm-6">
+							<div class="card user-card">
+								<div class="card-body pb-0">
+									<div class="d-flex mb-3 align-items-center">
+										
+										
+										<div class="dz-media me-3">
+											<% if (item.imageUrl.length > 0) { %>
+												<img src="<%= item.imageUrl[0].url %>" alt="">
+											<% } else { %>
+												<div class="dz-media me-3">
+													<span class="icon-placeholder bg-primary text-white">
+														<%= item.firstname.charAt(0).toUpperCase() + item.lastname.charAt(0).toUpperCase() %>
+													</span>
 												</div>
-                                                <span>Please send exact amount: <strong class="d-block">0.15050000 BTC</strong>
-                                                    <strong>1DonateWffyhwAjskoEwXt83pHZxhLTr8H</strong></span><br>
-                                                <small class="text-muted">Current exchange rate 1BTC = $6590 USD</small>
-                                            </div>
-                                            <div class="col-sm-3 mt-3"> <img src="images/qr.png" class="img-fluid width110" alt="/"> </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="table-responsive">
-                                    <table class="table table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th class="center">#</th>
-                                                <th>Item</th>
-                                                <th>Description</th>
-                                                <th class="right">Unit Cost</th>
-                                                <th class="center">Qty</th>
-                                                <th class="right">Total</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td class="center">1</td>
-                                                <td class="left strong">Origin License</td>
-                                                <td class="left">Extended License</td>
-                                                <td class="right">$999,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$999,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">2</td>
-                                                <td class="left">Custom Services</td>
-                                                <td class="left">Instalation and Customization (cost per hour)</td>
-                                                <td class="right">$150,00</td>
-                                                <td class="center">20</td>
-                                                <td class="right">$3.000,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">3</td>
-                                                <td class="left">Hosting</td>
-                                                <td class="left">1 year subcription</td>
-                                                <td class="right">$499,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$499,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">4</td>
-                                                <td class="left">Platinum Support</td>
-                                                <td class="left">1 year subcription 24/7</td>
-                                                <td class="right">$3.999,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$3.999,00</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-4 col-sm-5"> </div>
-                                    <div class="col-xl-4 col-lg-4 col-sm-7 ms-auto">
-                                        <table class="table table-clear">
-                                            <tbody>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Subtotal</strong></td>
-                                                    <td class="right">$8.497,00</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Discount (20%)</strong></td>
-                                                    <td class="right">$1,699,40</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">VAT (10%)</strong></td>
-                                                    <td class="right">$679,76</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Total</strong></td>
-                                                    <td class="right"><strong class="text-black">$7.477,36</strong><br>
-                                                        <strong class="text-black">0.15050000 BTC</strong></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+											<% } %>
+											
+										</div>
+										<div>
+											<h5 class="title mb-0"><a href="Tenant-profile.html"></a><%=item.firstname%> <%=item.lastname%></h5>
+											<span class="text-primary"><%=item.occupation%></span>
+										</div>
+									</div>
+									<p class="fs-12">Answering guest inquiries, directing phone calls, coordinating travel plans, and more.</p>
+									<ul class="list-group list-group-flush">
+										<li class="list-group-item">
+											<span class="mb-0 title">Gender</span> :
+											<span class="text-black ms-2"><%=item.gender%></span>
+										</li>
+										<li class="list-group-item">
+											<span class="mb-0 title">Phone</span> :
+											<span class="text-black ms-2"><%=item.phonenumber%></span>
+										</li>
+										<li class="list-group-item">
+											<span class="mb-0 title">Room</span> :
+											<span class="text-black desc-text ms-2"><%=item.Room.name%></span>
+										</li>
+										<li class="list-group-item">
+											<span class="mb-0 title">property</span> :
+											<span class="text-black desc-text ms-2"><%=item.property.name%></span>
+										</li>
+										<li class="list-group-item">
+											<span class="mb-0 title">property type</span> :
+											<span class="text-black desc-text ms-2"><%=item.property.type%></span>
+										</li>
+									</ul>
+								</div>
+								<div class="card-footer">
+									<li class="list-group-item">
+										<!-- <a href="/tool?type=compose&id=<%=item.id%>" class="btn btn-warning btn-xs">Write Message</a>
+										<a href="/tenant?type=detail&id=<%=item.id%>" class="btn btn-info btn-xs">View More Payment Record</a>
+										<a href="/tenant?type=detail&id=<%=item.id%>" class="btn btn-success btn-xs">Has Paid</a>
+										<a href="/tenant?type=detail&id=<%=item.id%>" class="btn btn-danger btn-xs">Has'nt Paid</a> -->
+										
+									</li>
+								</div>
+								
+
+							</div>
+						</div>
+				
+						<% }); %>
+					
+				</div>
+				<nav>
+					<ul class="pagination pagination-gutter pagination-primary no-bg">
+						<li class="page-item page-indicator">
+							<a class="page-link" href="javascript:void(0)">
+								<i class="la la-angle-left"></i></a>
+						</li>
+						<li class="page-item "><a class="page-link" href="javascript:void(0)">1</a>
+						</li>
+						<li class="page-item active"><a class="page-link" href="javascript:void(0)">2</a></li>
+						<li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+						<li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
+						<li class="page-item page-indicator">
+							<a class="page-link" href="javascript:void(0)">
+								<i class="la la-angle-right"></i></a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</div>
         <!--**********************************
             Content body end
         ***********************************-->
@@ -969,10 +966,11 @@
     <!-- Required vendors -->
     <script src="vendor/global/global.min.js"></script>
 	<script src="vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+	<script src="vendor/bootstrap-datepicker-master/js/bootstrap-datepicker.min.js"></script>
+	<script src="vendor/dropzone/dist/dropzone.js"></script>
     <script src="js/custom.min.js"></script>
 	<script src="js/deznav-init.js"></script>
 	
-
 </body>
 
 </html>
