--- a/views/users.ejs
+++ b/views/users.ejs
@@ -29,7 +29,11 @@
 	
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-	<link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+    <!-- Datatable -->
+    <link href="vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
+	<link href="vendor/datatables/responsive/responsive.css" rel="stylesheet">
+    <!-- Custom Stylesheet -->
+    <link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -84,13 +88,13 @@
 			<div class="custom-tab-1">
 				<ul class="nav nav-tabs">
 					<li class="nav-item">
-						<a class="nav-link" data-bs-toggle="tab" href="ecom-invoice.html#notes">Notes</a>
+						<a class="nav-link" data-bs-toggle="tab" href="table-datatable-basic.html#notes">Notes</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" data-bs-toggle="tab" href="ecom-invoice.html#alerts">Alerts</a>
+						<a class="nav-link" data-bs-toggle="tab" href="table-datatable-basic.html#alerts">Alerts</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" data-bs-toggle="tab" href="ecom-invoice.html#chat">Chat</a>
+						<a class="nav-link active" data-bs-toggle="tab" href="table-datatable-basic.html#chat">Chat</a>
 					</li>
 				</ul>
 				<div class="tab-content">
@@ -810,126 +814,63 @@
             <div class="container-fluid">
                 <div class="page-titles">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="javascript:void(0)">Shop</a></li>
-						<li class="breadcrumb-item active"><a href="javascript:void(0)">Invoice</a></li>
+						<li class="breadcrumb-item"><a href="javascript:void(0)">User</a></li>
+						<li class="breadcrumb-item active"><a href="javascript:void(0)">Users</a></li>
 					</ol>
                 </div>
-                 <div class="row">
-                    <div class="col-lg-12">
-
+                <!-- row -->
+                <div class="row">
+                   
+					<div class="col-12">
                         <div class="card">
-                            <div class="card-header"> Invoice <strong>01/01/<span class="current-year">2024</span></strong> <span class="float-end"> <strong>Status:</strong> Pending</span> </div>
+                            <div class="card-header">
+                                <h4 class="card-title">Users</h4>
+                            </div>
                             <div class="card-body">
-                                <div class="row mb-5">
-                                    <div class="mt-4 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                                        <h6>From:</h6>
-                                        <div> <strong>Webz Poland</strong> </div>
-                                        <div>Madalinskiego 8</div>
-                                        <div>71-101 Szczecin, Poland</div>
-                                        <div>Email: info@webz.com.pl</div>
-                                        <div>Phone: +48 444 666 3333</div>
-                                    </div>
-                                    <div class="mt-4 col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                                        <h6>To:</h6>
-                                        <div> <strong>Bob Mart</strong> </div>
-                                        <div>Attn: Daniel Marek</div>
-                                        <div>43-190 Mikolow, Poland</div>
-                                        <div>Email: marek@daniel.com</div>
-                                        <div>Phone: +48 123 456 789</div>
-                                    </div>
-                                    <div class="mt-4 col-xl-6 col-lg-6 col-md-12 col-sm-12 d-flex justify-content-lg-end justify-content-md-start justify-content-xs-start">
-                                        <div class="row align-items-center">
-											<div class="col-sm-9"> 
-												<div class="brand-logo justify-content-start p-0 mb-3">
-													<img class="logo-abbr me-2" src="images/logo.png" alt="/">
-													<h6 class="logo-compact">Soaro</h6>
-												</div>
-                                                <span>Please send exact amount: <strong class="d-block">0.15050000 BTC</strong>
-                                                    <strong>1DonateWffyhwAjskoEwXt83pHZxhLTr8H</strong></span><br>
-                                                <small class="text-muted">Current exchange rate 1BTC = $6590 USD</small>
-                                            </div>
-                                            <div class="col-sm-3 mt-3"> <img src="images/qr.png" class="img-fluid width110" alt="/"> </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="table-responsive">
-                                    <table class="table table-striped">
+                                    <table id="example3" class="display" style="min-width: 850px">
                                         <thead>
                                             <tr>
-                                                <th class="center">#</th>
-                                                <th>Item</th>
-                                                <th>Description</th>
-                                                <th class="right">Unit Cost</th>
-                                                <th class="center">Qty</th>
-                                                <th class="right">Total</th>
+                                                <!-- <th></th> -->
+                                                <th>FirstName</th>
+                                               
+                                                <th>roleName</th>
+                                                <th>officeAddress</th>
+                                                <th>Mobile</th>
+                                                <th>Email</th>
+                                                <th>Property</th>
+                                                <th>Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td class="center">1</td>
-                                                <td class="left strong">Origin License</td>
-                                                <td class="left">Extended License</td>
-                                                <td class="right">$999,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$999,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">2</td>
-                                                <td class="left">Custom Services</td>
-                                                <td class="left">Instalation and Customization (cost per hour)</td>
-                                                <td class="right">$150,00</td>
-                                                <td class="center">20</td>
-                                                <td class="right">$3.000,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">3</td>
-                                                <td class="left">Hosting</td>
-                                                <td class="left">1 year subcription</td>
-                                                <td class="right">$499,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$499,00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="center">4</td>
-                                                <td class="left">Platinum Support</td>
-                                                <td class="left">1 year subcription 24/7</td>
-                                                <td class="right">$3.999,00</td>
-                                                <td class="center">1</td>
-                                                <td class="right">$3.999,00</td>
-                                            </tr>
+											<% users.forEach(user => { %>
+												<tr>
+													
+													<td><%=user.name %></td>
+													
+													<td><%=user.roleName%></td>
+													<td><%=user.address%></td>
+													<td><a href="javascript:void(0);"><strong class="text-black"><%=user.phonenumber%></strong></a></td>
+													<td><a href="javascript:void(0);"><strong class="text-black"><%=user.email%></strong></a></td>
+													<td><%=user.name%></td>
+													<td>
+														<div class="d-flex">
+															<a href="javascript:void(0);" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fa fa-pencil"></i></a>
+															<a href="javascript:void(0);" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-trash"></i></a>
+														</div>												
+													</td>												
+												</tr>
+											<% }) %>
+
+                                            
                                         </tbody>
                                     </table>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-4 col-sm-5"> </div>
-                                    <div class="col-xl-4 col-lg-4 col-sm-7 ms-auto">
-                                        <table class="table table-clear">
-                                            <tbody>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Subtotal</strong></td>
-                                                    <td class="right">$8.497,00</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Discount (20%)</strong></td>
-                                                    <td class="right">$1,699,40</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">VAT (10%)</strong></td>
-                                                    <td class="right">$679,76</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="left"><strong class="text-black">Total</strong></td>
-                                                    <td class="right"><strong class="text-black">$7.477,36</strong><br>
-                                                        <strong class="text-black">0.15050000 BTC</strong></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+					
+				</div>
             </div>
         </div>
         <!--**********************************
@@ -969,10 +910,13 @@
     <!-- Required vendors -->
     <script src="vendor/global/global.min.js"></script>
 	<script src="vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+	
+    <!-- Datatable -->
+    <script src="vendor/datatables/js/jquery.dataTables.min.js"></script>
+	<script src="vendor/datatables/responsive/responsive.js"></script>
+    <script src="js/plugins-init/datatables.init.js"></script>
     <script src="js/custom.min.js"></script>
 	<script src="js/deznav-init.js"></script>
-	
 
 </body>
-
 </html>
