individual property dashboard

--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -14,10 +14,10 @@
                 </a>
                 <ul aria-expanded="false">
                     <li><a href="/dashboard">Dashboard</a></li>
-                    <li><a href="analytics.html">Analytics</a></li>
+                    <!-- <li><a href="analytics.html">Analytics</a></li>
                     <li><a href="review.html">Review</a></li>
                     <li><a href="order-list.html">Order List</a></li>
-                    <li><a href="customer-list.html">Customer</a></li>
+                    <li><a href="customer-list.html">Customer</a></li> -->
                     
                 </ul>
             </li>
@@ -87,9 +87,10 @@
                     
                 </ul>
             </li>
-            <li><a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                    <i class="flaticon-app"></i>
-                    <span class="nav-text">Tools</span>
+            <li>
+                <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
+                    <!-- <i class="flaticon-app"></i>
+                    <span class="nav-text">Tools</span> -->
                 </a>
                 <ul aria-expanded="false">
                     <!-- <li><a href="app-profile.html">Profile</a></li>
