--- a/views/tenant.ejs
+++ b/views/tenant.ejs
@@ -876,6 +876,7 @@
 							text: data.message,
 						});
 						form.reset();
+						window.location.reload()
 					} else {
 						document.getElementById('loaderOverlay').style.display = 'none';
 						Swal.fire({
