--- a/views/addproperty.ejs
+++ b/views/addproperty.ejs
@@ -626,10 +626,19 @@
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title">Add Property</h4>
+								
+									<a class="btn-primary btn" href="/property?type=addfresh" style="color: #fff;">create freshland</a>
+							
                             </div>
                             <div class="card-body">
 								<form id="propertyForm">
                                     <div class="row">
+										<!-- <div class="mb-3 col-lg-4 col-md-6">
+											<div class="form-check">
+												<label class="form-check-label"  for="freshLand">Fresh Land</label>
+											  <input class="form-check-input" required type="checkbox" id="freshLand" >
+											</div>
+										</div> -->
                                       <div class="mb-3 col-lg-4 col-md-6">
                                         <label class="form-label">Property Name</label>
                                         <input required type="text" name="name" class="form-control" placeholder="Property Name" required>
@@ -756,12 +765,7 @@
                                   
                                 
                                   
-                                      <div class="mb-3 col-lg-4 col-md-6">
-                                        <div class="form-check">
-                                            <label class="form-check-label"  for="freshLand">Fresh Land</label>
-                                          <input class="form-check-input" required type="checkbox" id="freshLand" checked>
-                                        </div>
-                                      </div>
+                                    
 
                                       <div class="mb-3 col-lg-4 col-md-6">
                                         <label class="form-label">Previous Owner fullName</label>
