--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -180,8 +180,8 @@
                     <li class="nav-item dropdown header-profile">
                         <a class="nav-link" href="javascript:void(0);" role="button" data-bs-toggle="dropdown">
                             <div class="header-info">
-                                <span class="text-black">korede.</span>
-                                <p class="fs-12 mb-0">Admin</p>
+                                <span class="text-black"><%=userDetails.name%></span>
+                                <p class="fs-12 mb-0"><%=userDetails.roleName%></p>
                             </div>
                             <img src="images/profile/17.jpg" width="20" alt="/">
                         </a>
